fix: horizontal table scrolling on mobile (#1541)

--- a/src/pages/badges/github-badges.module.css
+++ b/src/pages/badges/github-badges.module.css
@@ -536,8 +536,7 @@
 .tableWrapper {
   overflow-x: auto;
   margin-bottom: 32px;
-  display: flex;
-  justify-content: center;
+  width: 100%;
 }
 
 .achievementsTable,
